fix: product description white space

--- a/src/themes/custom-theme.scss
+++ b/src/themes/custom-theme.scss
@@ -695,14 +695,24 @@
       width: 100%;
     }
 
+    div[data-testid=fs-accordion-panel]>div {
+      gap: 0 !important;
+      line-height: 23px;
+    }
+
     div[data-testid="fs-accordion"] {
+      ul {
+        margin: 20px 0;
+      }
+
       li {
         list-style-type: disc;
         font-size: 16px;
         line-height: 23px;
         margin-left: 30px;
 
-        b {
+        b,
+        hr {
           margin-left: -30px;
         }
       }
@@ -713,8 +723,9 @@
 
       b {
         display: block;
-        margin: 10px 0 10px;
         font-size: 16px;
+        display: inline-block;
+        margin-bottom: 10px;
       }
     }
   }
@@ -782,6 +793,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    white-space: pre-wrap;
   }
 
   .product-description [data-fs-accordion] [data-fs-accordion-item] {
